Added logout button to all the user's home screen Fixed bug on recruiterHomeGUI not updating jobs table

--- a/JobSeekingSystem/src/AdminGUI.form
+++ b/JobSeekingSystem/src/AdminGUI.form
@@ -237,6 +237,17 @@
               </grid>
             </constraints>
           </hspacer>
+          <component id="a60a0" class="javax.swing.JButton" binding="logoutButton">
+            <constraints>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-16745473"/>
+              <font size="12" style="1"/>
+              <foreground color="-1"/>
+              <text value="Logout &gt;"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
