--- a/JobSeekingSystem/src/RecruiterHomeGUI.form
+++ b/JobSeekingSystem/src/RecruiterHomeGUI.form
@@ -13,7 +13,7 @@
     </properties>
     <border type="none"/>
     <children>
-      <grid id="ae545" binding="jobsPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="ae545" binding="jobsPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="50" left="70" bottom="60" right="70"/>
         <constraints>
           <tabbedpane title="Jobs"/>
@@ -29,7 +29,7 @@
           <grid id="e852a" binding="jobsContainer" layout-manager="GridLayoutManager" row-count="3" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="50" left="50" bottom="50" right="50"/>
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false">
+              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="650" height="750"/>
               </grid>
             </constraints>
@@ -89,6 +89,23 @@
               </component>
             </children>
           </grid>
+          <component id="a39c6" class="javax.swing.JButton" binding="logoutButton">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-16745473"/>
+              <font size="12" style="1"/>
+              <foreground color="-1"/>
+              <text value="Logout &gt;"/>
+              <verticalAlignment value="0"/>
+            </properties>
+          </component>
+          <hspacer id="d4036">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
         </children>
       </grid>
       <grid id="c5ea9" binding="searchPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
