--- a/JobSeekingSystem/src/JobSeekerJobGUI.form
+++ b/JobSeekingSystem/src/JobSeekerJobGUI.form
@@ -123,7 +123,7 @@
               </grid>
             </constraints>
           </vspacer>
-          <component id="e5538" class="javax.swing.JButton" default-binding="true">
+          <component id="e5538" class="javax.swing.JButton" binding="submitApplicationButton">
             <constraints>
               <grid row="13" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <minimum-size width="-1" height="40"/>
