--- a/JobSeekingSystem/src/JobSeekerJobGUI.form
+++ b/JobSeekingSystem/src/JobSeekerJobGUI.form
@@ -140,13 +140,14 @@
           </component>
           <component id="c85ec" class="javax.swing.JTextArea" binding="coverLetter">
             <constraints>
-              <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+              <grid row="11" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="0" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <minimum-size width="-1" height="100"/>
                 <preferred-size width="-1" height="100"/>
               </grid>
             </constraints>
             <properties>
               <background color="-1118482"/>
+              <lineWrap value="true"/>
             </properties>
           </component>
           <hspacer id="dd924">
