--- a/JobSeekingSystem/src/CreateJobGUI.form
+++ b/JobSeekingSystem/src/CreateJobGUI.form
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="CreateJobGUI">
-  <grid id="25d78" binding="createJobPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="50" left="50" bottom="50" right="50"/>
+  <grid id="25d78" binding="createJobPanel" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="50" left="70" bottom="60" right="70"/>
     <constraints>
       <xy x="20" y="20" width="1789" height="1067"/>
     </constraints>
@@ -13,7 +13,7 @@
       <grid id="27dc6" layout-manager="GridLayoutManager" row-count="37" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="50" left="50" bottom="50" right="50"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="true"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="true"/>
         </constraints>
         <properties>
           <background color="-1"/>
@@ -262,25 +262,19 @@
               <text value="Job Description"/>
             </properties>
           </component>
-          <scrollpane id="f5272" binding="descriptionScroll">
+          <component id="ed01b" class="javax.swing.JTextArea" binding="descriptionText">
             <constraints>
               <grid row="7" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="5" anchor="9" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="400" height="150"/>
+                <minimum-size width="-1" height="100"/>
+                <preferred-size width="300" height="100"/>
                 <maximum-size width="500" height="200"/>
               </grid>
             </constraints>
-            <properties/>
-            <border type="none"/>
-            <children>
-              <component id="ed01b" class="javax.swing.JTextArea" binding="descriptionText">
-                <constraints/>
-                <properties>
-                  <lineWrap value="true"/>
-                  <wrapStyleWord value="true"/>
-                </properties>
-              </component>
-            </children>
-          </scrollpane>
+            <properties>
+              <lineWrap value="true"/>
+              <wrapStyleWord value="true"/>
+            </properties>
+          </component>
           <component id="7030e" class="javax.swing.JLabel" binding="locationLabel">
             <constraints>
               <grid row="21" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="5" anchor="8" fill="0" indent="0" use-parent-layout="false">
@@ -537,7 +531,7 @@
             <properties>
               <font size="10"/>
               <foreground color="-4519667"/>
-              <labelFor value="30a7c"/>
+              <labelFor value=""/>
               <text value=""/>
             </properties>
           </component>
@@ -598,6 +592,11 @@
           </component>
         </children>
       </grid>
+      <vspacer id="b85fc">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </vspacer>
     </children>
   </grid>
 </form>
