can now get text for reply from inbox //TODO sort out message appear on click

--- a/JobSeekingSystem/src/JobSeekerHomeGUI.form
+++ b/JobSeekingSystem/src/JobSeekerHomeGUI.form
@@ -543,15 +543,7 @@
                   </grid>
                 </constraints>
               </hspacer>
-              <component id="510fb" class="javax.swing.JTextArea" binding="messageTextArea">
-                <constraints>
-                  <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="50"/>
-                  </grid>
-                </constraints>
-                <properties/>
-              </component>
-              <component id="27742" class="javax.swing.JTextField" binding="replyTextArea">
+              <component id="f4995" class="javax.swing.JTextField" binding="replyTextField">
                 <constraints>
                   <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -566,6 +558,14 @@
                 <properties>
                   <text value="Reply"/>
                 </properties>
+              </component>
+              <component id="de19d" class="javax.swing.JTextArea" binding="messageTextArea">
+                <constraints>
+                  <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="50"/>
+                  </grid>
+                </constraints>
+                <properties/>
               </component>
             </children>
           </grid>
