--- a/JobSeekingSystem/src/RecruiterHomeGUI.form
+++ b/JobSeekingSystem/src/RecruiterHomeGUI.form
@@ -333,7 +333,7 @@
         </properties>
         <border type="none"/>
         <children>
-          <grid id="35af0" binding="inboxContainer" layout-manager="GridLayoutManager" row-count="4" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="35af0" binding="inboxContainer" layout-manager="GridLayoutManager" row-count="6" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="50" left="50" bottom="50" right="50"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false">
@@ -377,6 +377,30 @@
                   </grid>
                 </constraints>
                 <properties/>
+              </component>
+              <component id="e226" class="javax.swing.JTextArea" binding="messageTextArea">
+                <constraints>
+                  <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="50"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="1a05b" class="javax.swing.JTextField" binding="replyTextField">
+                <constraints>
+                  <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="e61de" class="javax.swing.JButton" binding="replyButton">
+                <constraints>
+                  <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Reply"/>
+                </properties>
               </component>
             </children>
           </grid>
