--- a/JobSeekingSystem/src/ManageJobGUI.form
+++ b/JobSeekingSystem/src/ManageJobGUI.form
@@ -107,8 +107,7 @@
           <component id="2d14" class="javax.swing.JLabel" binding="updateTitle">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="1" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="250" height="50"/>
-                <maximum-size width="250" height="-1"/>
+                <preferred-size width="-1" height="50"/>
               </grid>
             </constraints>
             <properties>
@@ -165,7 +164,7 @@
               <model/>
             </properties>
           </component>
-          <component id="30933" class="javax.swing.JLabel" binding="salaryLabel" custom-create="true">
+          <component id="30933" class="javax.swing.JLabel" binding="salaryLabel">
             <constraints>
               <grid row="13" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
