--- a/JobSeekingSystem/src/CreateJobGUI.form
+++ b/JobSeekingSystem/src/CreateJobGUI.form
@@ -262,19 +262,6 @@
               <text value="Job Description"/>
             </properties>
           </component>
-          <component id="ed01b" class="javax.swing.JTextArea" binding="descriptionText">
-            <constraints>
-              <grid row="7" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="5" anchor="9" fill="0" indent="0" use-parent-layout="false">
-                <minimum-size width="-1" height="100"/>
-                <preferred-size width="300" height="100"/>
-                <maximum-size width="500" height="200"/>
-              </grid>
-            </constraints>
-            <properties>
-              <lineWrap value="true"/>
-              <wrapStyleWord value="true"/>
-            </properties>
-          </component>
           <component id="7030e" class="javax.swing.JLabel" binding="locationLabel">
             <constraints>
               <grid row="21" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="5" anchor="8" fill="0" indent="0" use-parent-layout="false">
@@ -590,6 +577,24 @@
               <text value=""/>
             </properties>
           </component>
+          <scrollpane id="7e690">
+            <constraints>
+              <grid row="7" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="9" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="200" height="100"/>
+              </grid>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="ed01b" class="javax.swing.JTextArea" binding="descriptionText">
+                <constraints/>
+                <properties>
+                  <lineWrap value="true"/>
+                  <wrapStyleWord value="true"/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
         </children>
       </grid>
       <vspacer id="b85fc">
