--- a/JobSeekingSystem/src/RecruiterViewCandidateGUI.form
+++ b/JobSeekingSystem/src/RecruiterViewCandidateGUI.form
@@ -225,7 +225,11 @@
               </scrollpane>
               <component id="848ff" class="javax.swing.JButton" binding="rejectButton">
                 <constraints>
-                  <grid row="15" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="15" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                    <minimum-size width="-1" height="30"/>
+                    <preferred-size width="-1" height="30"/>
+                    <maximum-size width="150" height="-1"/>
+                  </grid>
                 </constraints>
                 <properties>
                   <background color="-16745473"/>
@@ -236,7 +240,7 @@
                   <visible value="true"/>
                 </properties>
               </component>
-              <hspacer id="4501b">
+              <hspacer id="1ed6b">
                 <constraints>
                   <grid row="15" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
