fixed jobseeeker profile page

--- a/JobSeekingSystem/src/JobSeekerHomeGUI.form
+++ b/JobSeekingSystem/src/JobSeekerHomeGUI.form
@@ -676,7 +676,7 @@
                 </constraints>
                 <properties>
                   <font size="16" style="1"/>
-                  <text value="You Sklls"/>
+                  <text value="Your Skills"/>
                 </properties>
               </component>
               <component id="ed26d" class="javax.swing.JLabel" binding="jobseekerLocation">
@@ -747,18 +747,23 @@
                   </grid>
                 </constraints>
               </hspacer>
-              <component id="2ee16" class="javax.swing.JList" binding="jsSkillsTable">
+              <scrollpane id="dfb9d">
                 <constraints>
-                  <grid row="11" column="0" row-span="1" col-span="2" vsize-policy="6" hsize-policy="2" anchor="1" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="-1" height="50"/>
-                  </grid>
+                  <grid row="11" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
-                <properties>
-                  <enabled value="true"/>
-                  <font size="14"/>
-                  <model/>
-                </properties>
-              </component>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <component id="2ee16" class="javax.swing.JList" binding="jsSkillsTable">
+                    <constraints/>
+                    <properties>
+                      <enabled value="true"/>
+                      <font size="14"/>
+                      <model/>
+                    </properties>
+                  </component>
+                </children>
+              </scrollpane>
             </children>
           </grid>
         </children>
