--- a/JobSeekingSystem/src/RegisterGUI.form
+++ b/JobSeekingSystem/src/RegisterGUI.form
@@ -3,7 +3,7 @@
   <grid id="29798" binding="registerPanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="50" left="200" bottom="200" right="200"/>
     <constraints>
-      <xy x="20" y="20" width="1086" height="1300"/>
+      <xy x="20" y="20" width="1086" height="1308"/>
     </constraints>
     <properties>
       <background color="-1118482"/>
@@ -207,6 +207,7 @@
             <properties>
               <background color="-1"/>
               <text value="Admin"/>
+              <visible value="false"/>
             </properties>
           </component>
           <component id="1ae92" class="javax.swing.JLabel">
